test: add test for minimal nft contract

--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
   "scripts": {
     "build": "hardhat compile",
     "clean": "rm -rf artifacts cache",
-    "commit": "cz"
+    "commit": "cz",
+    "test": "hardhat test"
   },
   "dependencies": {
     "@openzeppelin/contracts": "5.0.1"
@@ -15,6 +16,7 @@
   "devDependencies": {
     "@commitlint/cli": "18.4.3",
     "@commitlint/config-conventional": "18.4.3",
+    "@nomicfoundation/hardhat-ethers": "^3.0.5",
     "@nomicfoundation/hardhat-toolbox": "4.0.0",
     "@types/chai": "4.3.11",
     "@types/mocha": "10.0.6",
