chore: update clean script

--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   },
   "scripts": {
     "build": "hardhat compile",
-    "clean": "rm -rf artifacts cache",
+    "clean": "rm -rf artifacts cache typechain-types",
     "commit": "cz",
     "test": "hardhat test"
   },
