--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "chai": "4.3.10",
     "commitizen": "4.3.0",
     "cz-conventional-changelog": "3.3.0",
+    "ethers": "6.9.1",
     "hardhat": "2.19.3",
     "husky": "8.0.3",
     "ts-node": "10.9.2",
