--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@commitlint/config-conventional": "18.4.3",
     "@nomicfoundation/hardhat-chai-matchers": "2.0.2",
     "@nomicfoundation/hardhat-ethers": "3.0.5",
+    "@nomicfoundation/hardhat-network-helpers": "1.0.10",
     "@nomicfoundation/hardhat-toolbox": "4.0.0",
     "@types/chai": "4.3.11",
     "@types/mocha": "10.0.6",
