--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
     "@commitlint/config-conventional": "19.1.0",
     "@nomicfoundation/hardhat-network-helpers": "1.0.10",
     "@nomicfoundation/hardhat-toolbox": "5.0.0",
-    "@types/chai": "4.3.13",
+    "@types/chai": "4.3.14",
     "@types/mocha": "10.0.6",
     "@types/node": "20.11.30",
     "chai": "4.4.1",
@@ -28,8 +28,9 @@
     "cz-conventional-changelog": "3.3.0",
     "ethers": "6.11.1",
     "hardhat": "2.22.1",
+    "hardhat-gas-reporter": "1.0.10",
     "husky": "9.0.11",
     "ts-node": "10.9.2",
-    "typescript": "5.4.2"
+    "typescript": "5.4.3"
   }
 }
