--- a/.github/workflows/wallet-test.yaml
+++ b/.github/workflows/wallet-test.yaml
@@ -1,11 +1,17 @@
-name: test
+name: wallet-test
 on:
   push:
     branches:
       - "**"
+    paths:
+      - .github/workflows/wallet-test.yaml
+      - wallet/**
 jobs:
   test:
     runs-on: ubuntu-latest
+    defaults:
+      run:
+        working-directory: wallet
     steps:
       - name: Set up pnpm
         uses: pnpm/action-setup@v3
@@ -22,7 +28,7 @@ jobs:
         uses: actions/cache@v4
         with:
           path: ${{ env.PNPM_STORE_PATH }}
-          key: pnpm-store-${{ hashFiles('pnpm-lock.yaml') }}
+          key: pnpm-store-${{ hashFiles('wallet/pnpm-lock.yaml') }}
       - name: Install dependencies
         run: pnpm install
       - name: Test
