--- a/package.json
+++ b/package.json
@@ -5,34 +5,14 @@
     }
   },
   "scripts": {
-    "build": "hardhat compile",
-    "clean": "rm -rf artifacts cache typechain-types",
     "commit": "cz",
-    "prepare": "husky",
-    "test": "hardhat test"
-  },
-  "dependencies": {
-    "@account-abstraction/contracts": "0.6.0",
-    "@openzeppelin/contracts": "5.0.2"
+    "prepare": "husky"
   },
   "devDependencies": {
     "@commitlint/cli": "19.3.0",
     "@commitlint/config-conventional": "19.2.2",
-    "@nomicfoundation/hardhat-chai-matchers": "2.0.7",
-    "@nomicfoundation/hardhat-ethers": "3.0.6",
-    "@nomicfoundation/hardhat-network-helpers": "1.0.11",
-    "@nomicfoundation/hardhat-toolbox": "5.0.0",
-    "@types/chai": "4.3.16",
-    "@types/mocha": "10.0.7",
-    "@types/node": "20.14.9",
-    "chai": "4.4.1",
     "commitizen": "4.3.0",
     "cz-conventional-changelog": "3.3.0",
-    "ethers": "6.13.1",
-    "hardhat": "2.22.6",
-    "hardhat-gas-reporter": "1.0.10",
-    "husky": "9.0.11",
-    "ts-node": "10.9.2",
-    "typescript": "5.5.3"
+    "husky": "9.0.11"
   }
 }
