chore(wallet): rerun test workflow

--- a/.github/workflows/wallet-test.yaml
+++ b/.github/workflows/wallet-test.yaml
@@ -2,7 +2,7 @@ name: wallet-test
 on:
   push:
     branches:
-      - "**"
+      - main
     paths:
       - .github/workflows/wallet-test.yaml
       - wallet/**
